[package]
name = "comments-parser"
version = "0.1.0"
authors = ["Kishan Takoordyal <kishan@kinesis.games>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
